--- a/Week 5/[5]oop_neuron/seminar/[seminar]neuron.ipynb
+++ b/Week 5/[5]oop_neuron/seminar/[seminar]neuron.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -214,12 +214,14 @@
    "source": [
     "def sigmoid(x):\n",
     "    \"\"\"Сигмоидальная функция\"\"\"\n",
-    "    pass"
+    "    return 1 / (1 + np.exp(-x))\n",
+    "# x = np.array([1,2,3])\n",
+    "# sigmoid(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -229,7 +231,7 @@
    "source": [
     "def sigmoid_derivative(x):\n",
     "    \"\"\"Производная сигмоиды\"\"\"\n",
-    "    pass"
+    "    return sigmoid(x) * (1 - sigmoid(x))"
    ]
   },
   {
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -265,7 +267,16 @@
     "id": "AM9vn3OX9igO",
     "outputId": "0391ccb7-3655-4637-e1eb-314d67b164e4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-6-010ebad91589>, line 52)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-010ebad91589>\"\u001b[1;36m, line \u001b[1;32m52\u001b[0m\n\u001b[1;33m    return losses\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "class Neuron:\n",
     "    def __init__(self, w=None, b=0):\n",
@@ -278,7 +289,7 @@
     "        self.b = b\n",
     "        \n",
     "    def activate(self, x):\n",
-    "        return # Ваш код здесь\n",
+    "        return sigmoid(x)\n",
     "        \n",
     "    def forward_pass(self, X):\n",
     "        \"\"\"\n",
@@ -289,6 +300,7 @@
     "        n = X.shape[0]\n",
     "        y_pred = np.zeros((n, 1))  # y_pred(icted) - предсказанные классы\n",
     "        # Ваш код здесь\n",
+    "        y_pred = self.activate(np.dot(X, self.w) + b)\n",
     "        return y_pred\n",
     "    \n",
     "    def backward_pass(self, X, y, y_pred, learning_rate=0.005):\n",
@@ -300,6 +312,8 @@
     "        В этом методе ничего возвращать не нужно, только правильно поменять веса\n",
     "        с помощью градиентного спуска.\n",
     "        \"\"\"\n",
+    "        self.w -= \n",
+    "        self.b -= \n",
     "        # Ваш код здесь\n",
     "    \n",
     "    def fit(self, X, y, num_epochs=300):\n",
