--- a/Week 5/[5]oop_neuron/seminar/[seminar]neuron.ipynb
+++ b/Week 5/[5]oop_neuron/seminar/[seminar]neuron.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -267,16 +267,7 @@
     "id": "AM9vn3OX9igO",
     "outputId": "0391ccb7-3655-4637-e1eb-314d67b164e4"
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-6-010ebad91589>, line 52)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-010ebad91589>\"\u001b[1;36m, line \u001b[1;32m52\u001b[0m\n\u001b[1;33m    return losses\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Neuron:\n",
     "    def __init__(self, w=None, b=0):\n",
@@ -312,8 +303,11 @@
     "        В этом методе ничего возвращать не нужно, только правильно поменять веса\n",
     "        с помощью градиентного спуска.\n",
     "        \"\"\"\n",
-    "        self.w -= \n",
-    "        self.b -= \n",
+    "        n = X.shape[0]\n",
+    "        sigma = self.activate(X @ self.w + b)\n",
+    "        self.w -= 1 / n * learning_rate * X.T @ ((sigma - y) * sigma * (1 - sigma))\n",
+    "        self.b -= 1 * learning_rate * np.mean((sigma - y) * sigma * (1 - sigma))\n",
+    "#         self.b -= np.mean(y_pred - y) * (sigmoid(self.w) - y) * sigmoid(self.w) * (1 - sigmoid(self.w))\n",
     "        # Ваш код здесь\n",
     "    \n",
     "    def fit(self, X, y, num_epochs=300):\n",
@@ -330,6 +324,7 @@
     "        \n",
     "        for i in range(num_epochs):\n",
     "            # Ваш код здесь\n",
+    "            pass\n",
     "        \n",
     "        return losses"
    ]
@@ -369,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -390,7 +385,17 @@
     "id": "aKmrhe_831vG",
     "outputId": "0bc0b4ae-084b-463e-9602-76f2cd17a260"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_pred = [[0.99987661]\n",
+      " [0.99999386]\n",
+      " [0.00449627]]\n"
+     ]
+    }
+   ],
    "source": [
     "w = np.array([1., 2.]).reshape(2, 1)\n",
     "b = 2.\n",
@@ -427,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -440,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -461,7 +466,17 @@
     "id": "pWooOLya31vX",
     "outputId": "cd2b2358-b615-4413-e984-0966ede7f355"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [[0.99999255]\n",
+      " [1.99997619]]\n",
+      "b = 2.000007416337067\n"
+     ]
+    }
+   ],
    "source": [
     "neuron.backward_pass(X, y, y_pred)\n",
     "\n",
@@ -558,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
